# rust-app-aws

./: .gitignore  README.md  deploy.sh
backend/: .env  Cargo.toml
backend/migrations/2021-10-09-223351_create_articles/: up.sql
backend/src/: interfaces.rs  main.rs  schema.rs
backend/src/errors/: database_error.rs  mod.rs
backend/src/handlers/: articles.rs
backend/src/models/: articles.rs  from_model.rs  mod.rs
deploy/: run-backend.sh  run-frontend.sh  run.sh
frontend/: .env  Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  main.rs
frontend/src/components/: article.rs  articles.rs  mod.rs  page_not_found.rs
frontend/src/entities/: interfaces.rs
frontend/src/routes/: mod.rs
frontend/src/service/: articles.rs  fetch.rs  future.rs  mod.rs
frontend/src/utils/: date.rs
frontend/static/styles/: app.css
