[package]
name = "rust-app-backend"
version = "0.1.0"
authors = ["guimauve <contact@guimauve.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-cors = "0.5.4"
actix-service = "1.0.1"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
diesel_full_text_search = "1.0.1"
r2d2 = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
dotenv_codegen = "0.15.0"

[profile.release]
opt-level = 3
# Less code to include into binary
panic = 'abort'
# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# Link time optimization using using whole-program analysis
lto = true
